--- a/css/main.css
+++ b/css/main.css
@@ -191,12 +191,30 @@ ul {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  text-align: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   list-style: none;
-  margin-bottom: 50px;
+}
+
+@media screen and (max-width: 767.98px) {
+  .nav-btn-list {
+    text-align: left;
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav-btn-list {
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav-btn-list {
+    margin-bottom: 50px;
+  }
 }
 
 .nav-btn__item {
@@ -217,6 +235,12 @@ ul {
           justify-content: center;
   margin-right: 8px;
   color: var(--secondary-bg-color);
+}
+
+@media screen and (max-width: 767.98px) {
+  .nav-btn__item {
+    margin-bottom: 15px;
+  }
 }
 
 .nav-btn__item:last-child {
@@ -1377,11 +1401,6 @@ ul {
 
 /*Portfolio*/
 .services {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   list-style: none;
 }
 
@@ -1424,19 +1443,25 @@ ul {
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.services-item {
-  -ms-flex-preferred-size: calc(100% / 3 - 30px);
-      flex-basis: calc(100% / 3 - 30px);
-  margin-right: 30px;
-  margin-bottom: 30px;
+@media screen and (min-width: 480px) {
+  .services-item {
+    width: 450px;
+  }
 }
 
-.services-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-
-.services-item:nth-child(3n) {
-  margin-right: 0;
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .services-item {
+    -ms-flex-preferred-size: calc(100% / 2 - 30px);
+        flex-basis: calc(100% / 2 - 30px);
+    margin-right: 15px;
+    margin-bottom: 30px;
+  }
+  .services-item:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
+  .services-item:nth-child(2n) {
+    margin-right: 0;
+  }
 }
 
 .services-img {
