--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,93 +1,108 @@
 /* Button */
 
 .btn__studio {
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
-    cursor: pointer;
-    text-decoration: none;
-    font-style: normal;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  text-decoration: none;
+  font-style: normal;
 
-    padding: 10px 16px;
-    min-width: 200px;
-    border-radius: 4px;
+  padding: 10px 16px;
+  min-width: 200px;
+  border-radius: 4px;
 
-    color: var(--white-color);
-    background: var(--accent-bg-cl);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border: transparent;
-    transition: color var(--cubic-bezier);
+  color: var(--white-color);
+  background: var(--accent-bg-cl);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border: transparent;
+  transition: color var(--cubic-bezier);
 
-      &:hover,
-      &:focus {
+  &:hover,
+  &:focus {
     background-color: var(--secondary-accent-cl);
     color: var(--white-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    }
+  }
 }
 
 .nav-btn-list {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
+
+  list-style: none;
+
+  @include mq(mobile-only) {
+    text-align: left;
+    margin-bottom: 40px;
+  }
+
+  @include mq(tablet) {
     text-align: center;
     justify-content: center;
-    list-style: none;
+    margin-bottom: 30px;
+  }
+
+  @include mq(desktop) {
     margin-bottom: 50px;
+  }
 }
 
 .nav-btn__item {
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
-    cursor: pointer;
-    text-decoration: none;
-    font-style: normal;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  text-decoration: none;
+  font-style: normal;
 
-    align-items: center;
-    text-align: left;
-    justify-content: center;
-    margin-right: 8px;
+  align-items: center;
+  text-align: left;
+  justify-content: center;
+  margin-right: 8px;
 
-    color: var(--secondary-bg-color);
+  color: var(--secondary-bg-color);
+
+  @include mq(mobile-only) {
+    margin-bottom: 15px;
+  }
 }
 
 .nav-btn__item:last-child {
-    margin-right: 0;
+  margin-right: 0;
 }
 
-
 .nav__btn {
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.63;
-    letter-spacing: 0.03em;
-    text-decoration: none;
-    font-style: normal;
-    cursor: pointer;
-    border: none;
-    padding: 6px 22px;
-    border-radius: 4px;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  font-style: normal;
+  cursor: pointer;
+  border: none;
+  padding: 6px 22px;
+  border-radius: 4px;
 
-    color: var(--main-txt-cl);
-    background: var(--secondary-bg-color);
-    transition: color var(--cubic-bezier),
-    background-color var(--cubic-bezier),
+  color: var(--main-txt-cl);
+  background: var(--secondary-bg-color);
+  transition: color var(--cubic-bezier), background-color var(--cubic-bezier),
     box-shadow var(--cubic-bezier);
 
-      &:hover,
-      &:focus {
+  &:hover,
+  &:focus {
     color: var(--white-color);
     background: var(--accent-bg-cl);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    }
+  }
 }
 
 .nav__btn.active {
-    color: var(--white-color);
-    background-color: var(--accent-bg-cl);
+  color: var(--white-color);
+  background-color: var(--accent-bg-cl);
 }
