--- a/scss/layouts/servives.scss
+++ b/scss/layouts/servives.scss
@@ -40,17 +40,20 @@
   list-style: none;
   text-decoration: none;
   transition: box-shadow var(--cubic-bezier);
+  width: 100%;
 
   display: flex;
-  flex-direction: column;
 
   @include mq(mobile-only) {
-    width: 100%;
+  flex-direction: column;
+}
+
+  @include mq(tablet-only) {
+  flex-direction: column;
   }
 
   @include mq(desktop) {
     display: block;
-    flex-grow: 1;
   }
 
   &:hover,
