--- a/css/main.css
+++ b/css/main.css
@@ -1465,27 +1465,33 @@ ul {
   transition: -webkit-box-shadow var(--cubic-bezier);
   transition: box-shadow var(--cubic-bezier);
   transition: box-shadow var(--cubic-bezier), -webkit-box-shadow var(--cubic-bezier);
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
 @media screen and (max-width: 767.98px) {
   .services-link {
-    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .services-link {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .services-link {
     display: block;
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
   }
 }
 
@@ -1576,7 +1582,6 @@ ul {
 .product-overlay {
   position: relative;
   overflow: hidden;
-  width: 450px;
 }
 
 /*Footer*/
