--- a/scss/layouts/servives.scss
+++ b/scss/layouts/servives.scss
@@ -26,6 +26,10 @@
   border-right: 1px solid var(--main-border-cl);
   border-bottom: 1px solid var(--main-border-cl);
   border-left: 1px solid var(--main-border-cl);
+
+  @include mq(tablet-only) {
+    flex-grow: 1;
+  }
 }
 
 .services-position {
@@ -49,6 +53,7 @@
 }
 
   @include mq(tablet-only) {
+    display: flex;
   flex-direction: column;
   }
 
@@ -138,5 +143,4 @@
 .product-overlay {
   position: relative;
   overflow: hidden;
-  width: 450px;
 }
