--- a/css/main.css
+++ b/css/main.css
@@ -1451,6 +1451,14 @@ ul {
   border-left: 1px solid var(--main-border-cl);
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .services-list {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+}
+
 .services-position {
   font-size: 16px;
   line-height: 1.88;
