--- a/css/main.css
+++ b/css/main.css
@@ -1417,6 +1417,11 @@ ul {
 
 /*Portfolio*/
 .services {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   list-style: none;
   -webkit-box-align: center;
       -ms-flex-align: center;
