--- a/css/main.css
+++ b/css/main.css
@@ -987,12 +987,6 @@ ul {
   background-color: transparent;
 }
 
-@media screen and (min-width: 768px) {
-  .menu-button {
-    display: none;
-  }
-}
-
 .menu-button .icon-cross {
   display: none;
 }
@@ -1005,21 +999,125 @@ ul {
   display: none;
 }
 
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
 .menu-container {
   display: none;
   position: absolute;
   top: 100%;
   left: 0;
   width: 100%;
-  height: 796px;
-  z-index: 9;
-  border-color: var(--white-bg-cl);
+  height: 100%;
+  z-index: 2;
+  padding: 48px 40px;
+}
+
+.menu-container .menu-content {
+  padding-right: auto;
 }
 
 @media screen and (max-width: 767.98px) {
   .menu-container.is-open {
     display: block;
+    width: 480px;
+    height: 796px;
+    background-color: var(--white-bg-cl);
   }
+  .menu-container.is-open .logo {
+    z-index: 1;
+  }
+}
+
+.menu-content, .menu-contacts, .menu-socials,
+.menu-content__link,
+.menu-contacts__mail,
+.menu-contacts__phone,
+.menu-socials__link {
+  list-style: none;
+  text-decoration: none;
+  font-style: normal;
+}
+
+.menu-content__link,
+.menu-content__link--active {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+}
+
+.menu-content__link {
+  color: var(--main-txt-cl);
+}
+
+.menu-content__link--active {
+  color: var(--accent-txt-cl);
+}
+
+.menu-contacts__phone {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--accent-txt-cl);
+}
+
+.menu-contacts__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--secondary-txt-cl);
+}
+
+.menu-socials__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-txt-cl);
+}
+
+.menu-content {
+  margin-bottom: 302px;
+}
+
+.menu-contacts {
+  margin-bottom: 64px;
+}
+
+.menu-content__list {
+  margin-bottom: 32px;
+}
+
+.menu-contacts__list {
+  margin-bottom: 32px;
+}
+
+.menu-socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media screen and (max-width: 767.98px) {
+  .menu-container.is-open .logo {
+    display: none;
+  }
+}
+
+.menu-socials__list:not(:last-child)::after {
+  content: '';
+  width: 2px;
+  height: 22px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  margin: 0 10px;
 }
 
 /*Секція герой*/
