--- a/scss/layouts/_menu.scss
+++ b/scss/layouts/_menu.scss
@@ -1,42 +1,141 @@
 .menu-button {
-    @include mq(tablet) {
-        display: none;
-    }
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
 
-    display: inline-flex;
-    margin: 0;
-    padding: 0;
-    border: none;
-    background-color: transparent;
+  & .icon-cross {
+    display: none;
+  }
 
-    & .icon-cross {
-        display: none;
-    }
+  &.is-open .icon-cross {
+    display: block;
+  }
 
-    &.is-open .icon-cross {
-        display: block;
-    }
+  &.is-open .icon-menu {
+    display: none;
+  }
 
-    &.is-open .icon-menu {
-        display: none;
-    }
+  @include mq(tablet) {
+    display: none;
+  }
 }
 
 .menu-container {
-    display: none;
-    position: absolute;
+  display: none;
+  position: absolute;
     top: 100%;
     left: 0;
     width: 100%;
-    height: 796px;
-    z-index: 9;
+    height: 100%;
+    z-index: 2;
+    padding: 48px 40px;
+    
 
-    border-color: var(--white-bg-cl);
-
-    @include mq(mobile-only) {
-        &.is-open {
-            display: block;
-        }
+    .menu-content {
+        padding-right: auto;
     }
+
+  @include mq(mobile-only) {
+    &.is-open {
+      display: block;
+      width: 480px;
+      height: 796px;
+
+      .logo {
+        z-index: 1;
+      }
+
+      background-color: var(--white-bg-cl);
+    }
+  }
 }
 
+.menu-content, .menu-contacts, .menu-socials,
+.menu-content__link,
+.menu-contacts__mail,
+.menu-contacts__phone,
+.menu-socials__link {
+    list-style: none;
+    text-decoration: none;
+    font-style: normal;
+}
+
+.menu-content__link,
+.menu-content__link--active {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+}
+
+.menu-content__link {
+color: var(--main-txt-cl);  
+}
+
+.menu-content__link--active {
+color: var(--accent-txt-cl);
+}
+
+.menu-contacts__phone {
+font-weight: 500;
+font-size: 34px;
+line-height: 1.18;
+letter-spacing: 0.02em;
+
+color: var(--accent-txt-cl);
+}
+
+.menu-contacts__mail {
+font-weight: 500;
+font-size: 24px;
+line-height: 1.17;
+letter-spacing: 0.02em;
+
+color: var(--secondary-txt-cl);
+}
+
+.menu-socials__link {
+font-weight: 500;
+font-size: 18px;
+line-height: 1.22;
+letter-spacing: 0.02em;
+
+    color: var(--accent-txt-cl);
+}
+ .menu-content {
+    margin-bottom: 302px;
+ }
+
+ .menu-contacts {
+    margin-bottom: 64px;
+ }
+
+ .menu-content__list {
+    margin-bottom: 32px;
+ }
+
+ .menu-contacts__list {
+    margin-bottom: 32px;
+ }
+
+ .menu-socials {
+    display: flex;
+ }
+
+
+ @include mq(mobile-only) {
+    .menu-container.is-open .logo{
+        display: none;
+    }
+ }
+
+ .menu-socials__list:not(:last-child)::after {
+    content: '';
+    width: 2px;
+    height: 22px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    transform: rotate(90deg);
+    margin: 0 10px;
+ }
