--- a/css/main.css
+++ b/css/main.css
@@ -1018,10 +1018,6 @@ ul {
   padding: 48px 40px;
 }
 
-.menu-container .menu-content {
-  padding-right: auto;
-}
-
 @media screen and (max-width: 767.98px) {
   .menu-container.is-open {
     display: block;
@@ -1034,7 +1030,33 @@ ul {
   }
 }
 
-.menu-content, .menu-contacts, .menu-socials,
+.menu-content {
+  padding-right: auto;
+  margin-bottom: 302px;
+}
+
+.menu-content__link {
+  color: var(--main-txt-cl);
+}
+
+.menu-content__link--active {
+  color: var(--accent-txt-cl);
+}
+
+.menu-content__link, .menu-content__link--active {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+}
+
+.menu-content__list {
+  margin-bottom: 32px;
+}
+
+.menu-content,
+.menu-contacts,
+.menu-socials,
 .menu-content__link,
 .menu-contacts__mail,
 .menu-contacts__phone,
@@ -1044,20 +1066,8 @@ ul {
   font-style: normal;
 }
 
-.menu-content__link,
-.menu-content__link--active {
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 1.18;
-  letter-spacing: 0.02em;
-}
-
-.menu-content__link {
-  color: var(--main-txt-cl);
-}
-
-.menu-content__link--active {
-  color: var(--accent-txt-cl);
+.menu-contacts {
+  margin-bottom: 64px;
 }
 
 .menu-contacts__phone {
@@ -1076,26 +1086,6 @@ ul {
   color: var(--secondary-txt-cl);
 }
 
-.menu-socials__link {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 1.22;
-  letter-spacing: 0.02em;
-  color: var(--accent-txt-cl);
-}
-
-.menu-content {
-  margin-bottom: 302px;
-}
-
-.menu-contacts {
-  margin-bottom: 64px;
-}
-
-.menu-content__list {
-  margin-bottom: 32px;
-}
-
 .menu-contacts__list {
   margin-bottom: 32px;
 }
@@ -1104,6 +1094,14 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.menu-socials__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-txt-cl);
 }
 
 @media screen and (max-width: 767.98px) {
