--- a/scss/layouts/_menu.scss
+++ b/scss/layouts/_menu.scss
@@ -25,17 +25,12 @@
 .menu-container {
   display: none;
   position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-    padding: 48px 40px;
-    
-
-    .menu-content {
-        padding-right: auto;
-    }
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  padding: 48px 40px;
 
   @include mq(mobile-only) {
     &.is-open {
@@ -52,90 +47,94 @@
   }
 }
 
-.menu-content, .menu-contacts, .menu-socials,
-.menu-content__link,
-.menu-contacts__mail,
-.menu-contacts__phone,
-.menu-socials__link {
-    list-style: none;
-    text-decoration: none;
-    font-style: normal;
-}
+.menu-content {
+  padding-right: auto;
+  margin-bottom: 302px;
 
-.menu-content__link,
-.menu-content__link--active {
+  &__link {
+    color: var(--main-txt-cl);
+  }
+
+  &__link--active {
+    color: var(--accent-txt-cl);
+  }
+
+  &__link,
+  &__link--active {
     font-weight: 500;
     font-size: 40px;
     line-height: 1.18;
     letter-spacing: 0.02em;
+  }
+
+  &__list {
+    margin-bottom: 32px;
+  }
 }
 
-.menu-content__link {
-color: var(--main-txt-cl);  
-}
-
-.menu-content__link--active {
-color: var(--accent-txt-cl);
-}
-
-.menu-contacts__phone {
-font-weight: 500;
-font-size: 34px;
-line-height: 1.18;
-letter-spacing: 0.02em;
-
-color: var(--accent-txt-cl);
-}
-
-.menu-contacts__mail {
-font-weight: 500;
-font-size: 24px;
-line-height: 1.17;
-letter-spacing: 0.02em;
-
-color: var(--secondary-txt-cl);
-}
-
+.menu-content,
+.menu-contacts,
+.menu-socials,
+.menu-content__link,
+.menu-contacts__mail,
+.menu-contacts__phone,
 .menu-socials__link {
-font-weight: 500;
-font-size: 18px;
-line-height: 1.22;
-letter-spacing: 0.02em;
+  list-style: none;
+  text-decoration: none;
+  font-style: normal;
+}
+
+.menu-contacts {
+  margin-bottom: 64px;
+
+  &__phone {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
 
     color: var(--accent-txt-cl);
+    
+  }
 }
- .menu-content {
-    margin-bottom: 302px;
- }
 
- .menu-contacts {
-    margin-bottom: 64px;
- }
+ .menu-contacts__mail {
+   font-weight: 500;
+   font-size: 24px;
+   line-height: 1.17;
+   letter-spacing: 0.02em;
 
- .menu-content__list {
-    margin-bottom: 32px;
+   color: var(--secondary-txt-cl);
  }
 
  .menu-contacts__list {
-    margin-bottom: 32px;
+   margin-bottom: 32px;
  }
 
- .menu-socials {
-    display: flex;
- }
+.menu-socials {
+  display: flex;
 
+  &__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
 
- @include mq(mobile-only) {
-    .menu-container.is-open .logo{
-        display: none;
-    }
- }
+    color: var(--accent-txt-cl);
+  }
+}
 
- .menu-socials__list:not(:last-child)::after {
-    content: '';
-    width: 2px;
-    height: 22px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    transform: rotate(90deg);
-    margin: 0 10px;
- }
+@include mq(mobile-only) {
+  .menu-container.is-open .logo {
+    display: none;
+  }
+}
+
+.menu-socials__list:not(:last-child)::after {
+  content: '';
+  width: 2px;
+  height: 22px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+  margin: 0 10px;
+}
