--- a/css/main.css
+++ b/css/main.css
@@ -1029,7 +1029,7 @@ ul {
     left: 0;
     padding: 48px 40px;
     width: 100%;
-    height: 800px;
+    height: 100vh;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -1039,8 +1039,21 @@ ul {
   }
 }
 
+.mobile-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .menu-block {
-  margin-bottom: 302px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 600px;
 }
 
 .menu-content {
