--- a/scss/layouts/_menu.scss
+++ b/scss/layouts/_menu.scss
@@ -37,16 +37,24 @@
       left: 0;
       padding: 48px 40px;
       width: 100%;
-      height: 800px;
+      height: 100vh;
       flex-direction: column;
       z-index: 2;
       background-color: var(--white-bg-cl);
+      
     }
   }
 }
 
+.mobile-menu {
+  display: flex;
+  flex-direction: column;
+ 
+}
+
 .menu-block {
-  margin-bottom: 302px;
+  display: flex;
+  margin-bottom: 600px;
 }
 
 .menu-content {
