--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,12 @@ ul {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .section.feature {
+    padding-bottom: 0;
+  }
+}
+
 .section.product {
   display: none;
 }
@@ -991,6 +997,7 @@ ul {
   padding: 0;
   border: none;
   background-color: transparent;
+  z-index: 10;
 }
 
 .menu-button .icon-cross {
@@ -1025,7 +1032,8 @@ ul {
   .menu-container.is-open {
     display: block;
     position: absolute;
-    top: 100%;
+    position: fixed;
+    top: 0;
     left: 0;
     padding: 48px 40px;
     width: 100%;
@@ -1047,13 +1055,16 @@ ul {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 100%;
 }
 
 .menu-block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 600px;
 }
 
 .menu-content {
@@ -1797,9 +1808,6 @@ ul {
         flex-basis: calc((100% - 2 * 30px) / 2);
     margin: 15px;
   }
-  .services-item:nth-last-child(-n + 2) {
-    margin-bottom: 0;
-  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1810,9 +1818,6 @@ ul {
     -ms-flex-preferred-size: calc((100% - 3 * 30px) / 3);
         flex-basis: calc((100% - 3 * 30px) / 3);
     margin: 15px;
-  }
-  .services-item:nth-last-child(-n + 3) {
-    margin-bottom: 0;
   }
 }
 
