--- a/scss/layouts/_menu.scss
+++ b/scss/layouts/_menu.scss
@@ -4,6 +4,7 @@
   padding: 0;
   border: none;
   background-color: transparent;
+  z-index: 10;
 
   & .icon-cross {
     display: none;
@@ -33,7 +34,8 @@
     &.is-open {
       display: block;
       position: absolute;
-      top: 100%;
+      position: fixed;
+      top: 0;
       left: 0;
       padding: 48px 40px;
       width: 100%;
@@ -49,12 +51,13 @@
 .mobile-menu {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
  
 }
 
 .menu-block {
   display: flex;
-  margin-bottom: 600px;
 }
 
 .menu-content {
